css/styles.css
/* ... */
#hero .welcome {
  text-align: center;
}

#hero .qotd {
  text-align: center;

  margin-bottom: 33px;
}

#hero .header-link {
  text-decoration: underline dotted 2.3px;
}

#hero .welcome h2 {
  text-align: center;
  line-height: 1;
  margin-bottom: 11px;
}

#hero .welcome p {
  font-size: var(--fs-body);
  font-weight: var(--fw-light); 
  
  margin-bottom: 11px;
}

#hero .qotd p {
  font-size: var(--fs-body);
  font-weight: var(--fw-light);
  font-style: italic;
}

#hero .qotd figcaption {
  font-size: var(--fs-body);
  font-weight: var(--fw-regular);
}

#hero #press-start-container {
  display: grid;
  place-items: center;
}

#hero #press-start-container p {
  font-style: italic;
  font-family: var(--ff-accent);

  font-size: max(0.75rem, calc(var(--fs-press-start) - 0.18rem));
  font-weight: var(--fw-bold-700);
  opacity: 0.38;
  padding-right: 5.5vw;
}

#hero #press-start-btn {
  /* display: block; */

  font-family: var(--ff-pixelated);
  margin: 0 auto;
  letter-spacing: 1px;
  font-size: var(--fs-press-start);
  color: var(--clr-body-primary-nature-brown);
  text-shadow: var(--bs-retro);
  transition: transform 0.3s ease-in;
  width: max-content;

  animation: psp 0.8s linear alternate infinite;
  -webkit-animation: psp 0.8s linear alternate infinite;
}

#hero #press-start-btn:hover {
  animation: psp 0.33s linear alternate infinite, psp-hover 0.55s ease-out forwards;
  -webkit-animation: psp 0.33s linear alternate infinite, psp-hover 0.55s ease-out forwards;
  filter: unset;
}

#hero #press-start-btn ~ p {
  transition: opacity 0.38s ease-out;

  -webkit-user-select: none; /* Safari */        
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */
}

#hero #press-start-btn:hover ~ p {
  opacity: 0;
  /* pointer-events: none; */
}

#about {
  position: relative;
}

#about #avatar-container {
  display: grid;
  justify-content: center;

  padding: 0 33px 33px 33px;
  width: 100%;
}

#about #avatar-overflow-container {
  position: relative;

  border-radius: 50%;
  overflow: hidden;

  margin: 0 auto;
  transition: all 0.3s ease-in;
}

/* rgbCyclone360 */
#about #avatar-overflow-container::before {
  position: absolute;
  content: '';
  height: 100%;
  width: 100%;
  inset: 0;

  background: linear-gradient(to bottom right, red, green, blue);
  border-radius: 50%;
  overflow: hidden;
  opacity: 18%;

  -webkit-user-select: none; /* Safari */        
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */

  animation: three-sixty 0.333s linear infinite; 
  -webkit-animation: three-sixty 0.333s linear infinite;
}

#about #avatar-overflow-container img {
  filter: sepia(1) brightness(0.7);
  transition: all 0.3s ease-in;
  border-radius: 50%;

  animation: avatar-cyclone 8s linear forwards;
  -webkit-animation: avatar-cyclone 8s linear forwards;
}

#about #avatar-overflow-container img:hover {
  filter: sepia(0) brightness(1) saturate(0.55);
}

#about #wave {
  display: inline-block;
  animation: wave 0.3s linear alternate infinite;
  -webkit-animation: wave 0.3s linear alternate infinite;
}

#about .nyc {
  font-family: bookman-jf-pro, serif;
  font-style: italic;
  word-spacing: 7px;
  font-feature-settings: unset;
}

#about .nyc-glyph {
  /* use the first available swash character (add 2 after to use the second) */
  font-feature-settings:"swsh";
}

#about .jkc-text {
  font-size: var(--fs-h3);
  font-weight: bold;
}

#about .cloud {
  display: inline-block;
  animation: cloud 0.5s linear alternate infinite;
  -webkit-animation: cloud 0.5s linear alternate infinite;
  

}

#about #stack {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(75px, 1fr));
  width: min(500px, 100%);
}

#about .tech-icon {
  display: grid;
  text-align: center; 
}

#about .tech-icon:hover > i {
  animation: jiggle 333ms linear forwards;
  -webkit-animation: jiggle 333ms linear forwards;
}

#about .icon {
  font-size: 2.8rem;
}

#about .icon-name {
  font-size: var(--fs-icon-name);
  transition: transform 333ms ease-in;
}

#about .tech-icon:hover > .icon-name {
  transform: translateY(8px) scale(1.3);
}

#full-nav #key-hole {
  position: fixed;
  top: 33px;
  right: -13px;

  height: 43px;

  z-index: -1;
}

#full-nav {  
  position: sticky;
  top: -1px;

  display: grid;
  place-items: center;
  height: 100px;
  width: 100vw;

  transition: all 0.38s ease-in;

  z-index: 3;
}

#full-nav #key {
  display: grid;
  place-items: center;

  height: 100%;
  overflow: hidden;
  width: 100%;

  transition: all 0.38s ease-in;
}

#key:hover {
  animation: key-jingle 0.38s linear alternate infinite;
}

#full-nav #key img {
  cursor: pointer;
  filter: drop-shadow(0 0 13px var(--clr-body-accent-nature-green));
  opacity: 1;
  width: 11rem;
}


#full-nav.is-pinned #key img {
  opacity: 0.7;
  transition: opacity 0.38s ease-in;
} 

#full-nav.is-pinned #key img:hover {
  opacity: 1;
} 

#full-nav.is-pinned #key.nav-toggle.open img {
  opacity: 1;
}

/* keyAnimation */
#full-nav .nav-toggle.open {
  animation: key 0.8s linear alternate forwards;
  -webkit-animation: key 0.8s linear alternate forwards;
}

#full-nav nav {
  position: absolute;
  top: 88px;
  right: 0;
  
  opacity: 0;
  visibility: hidden;
  
  transition: all 0.38s 0.28s ease-in-out;
}

#full-nav .nav-toggle.open ~ nav {
  opacity: 1;
  visibility: visible;
}

#full-nav nav ul {
  display: grid;
  justify-items: end;
  gap: 18px;
  
  border: 3px ridge white;
  border-top-left-radius: 111px;
  border-bottom-right-radius: 33px;
  border-bottom-left-radius: 33px;
  list-style-type: none;
  padding: 11px 0 11px 11px;
}

#full-nav nav ul::before {
  content: '';

  position: absolute;
  inset: 0;
  
  background: linear-gradient(to bottom right, red, green, blue);
  border-top-left-radius: 111px;
  border-bottom-left-radius: 33px;
  border-bottom-right-radius: 33px;
  opacity: 18%;
} 
/* ... */

